--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -22,7 +22,8 @@ main section.categories-show {
       .soldout {
         min-width: 110px;
         background: rgba(224, 14, 14, 0.8);
-        border: 1px solid rgba(224, 14, 14, 0.8);
+        // border: 1px solid rgba(224, 14, 14, 0.8);
+        border: 0px;// to stay consistent with add button
         border-radius: 0.25em;
         color: white;
         padding: 0.375rem 0.75rem;
@@ -92,6 +93,7 @@ main section.categories-show {
           background-color: rgba(0, 130, 29, 0.7);
           color: white;
         }
+       
       }
     }
   }
