--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,9 +7,11 @@
     </h1>
   <% end%>
   <div>
+  <button class="soldout btn">Sold Out</button>
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
     <% end %>
   </div>
+  
 </article>
