--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -93,6 +93,9 @@ main section.categories-show {
           background-color: rgba(0, 130, 29, 0.7);
           color: white;
         }
+        .fade {
+          opacity: 0.5
+        }
        
       }
     }
