--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,11 +7,14 @@
     </h1>
   <% end%>
   <div>
+  <% if product.quantity < 1 %>
   <button class="soldout btn">Sold Out</button>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
+  <% end %>
+
+    <%= button_to add_item_cart_path(product_id: product.id), class: (product.quantity <1 ? 'btn fade' : 'btn'),
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
     <% end %>
   </div>
-  
+
 </article>
