display product info, final total, and email

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,25 +1,29 @@
 <section class="orders-show">
 
   <header class="page-header">
-    <h1>Order #<%= @order.id %></h1>
-    # <h4><%= @line_items.inspect%></h4>
-    <h4>products <%= @products.inspect%></h4>
+    <h2>Order Details</h2>
   </header>
   <div>
-  <h3>Order Details</h3>
+  <h4>Order Number: <%= @order.id %></h4>
   <table>
     <thead>
       <tr>
+        <th>Product Picture</th>
         <th>Product Name</th>
+        <th>Product Description</th>
         <th>Quantity</th>
         <th>Item Price</th>
         <th>Item Total</th>
       </tr>
     </thead>
+    <% final_total = 0 %>
     <tbody>
-      <% @line_items.each do |entry| %>
+      <% @line_items.each do |entry|
+        final_total += entry.total_price_cents %>
         <tr>
+          <td><%= image_tag @products[entry.product_id - 1].image.thumb.url , alt: @products[entry.product_id - 1].name %></td>   
           <td><%= @products[entry.product_id - 1].name %></td>
+          <td><%= @products[entry.product_id - 1].description %></td>
           <td><%= entry.quantity %></td>
           <td>$<%= number_with_precision(entry.item_price_cents / 100.0, precision: 2) %></td>
           <td>$<%= number_with_precision(entry.total_price_cents / 100.0, precision: 2) %></td>
@@ -27,13 +31,13 @@
         <% end %>
     </tbody>
   </table>
+  <h4> Final Total: $<%= number_with_precision(final_total/100.0 , precision: 2) %> </h4>
+  <h4> Email for this purchase: <%= @order.email %> </h4>
 </div>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
   </div>
-
-  <h4><%= @order.inspect%></h4>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
