--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<div class="container row">
+  <h1 class="mt-5">Admin Dashboard</h1>
+  <p class="mt-3">Number of Products: <a href="<%= ENV['BASE_URL'] %>/admin/products"> <%= @product_count %></a></p>
+  <p class="mt-3">Number of Categories: <a href="<%= ENV['BASE_URL'] %>/admin/products"> <%= @category_count %></a></p>
+</div>
+
+
