--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -67,6 +67,9 @@
         <li class="nav-item end-0">
           <%= link_to "About Us", about_path, class: "nav-link"%> 
         </li>
+        <li class="nav-item end-0">
+        <%= link_to "Sign Up", signup_path, class: "nav-link"%> 
+      </li>
       </ul>
     </div>
   </div>
