add log In to nav bar

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -70,6 +70,9 @@
         <li class="nav-item end-0">
         <%= link_to "Sign Up", signup_path, class: "nav-link"%> 
       </li>
+      <li class="nav-item end-0">
+      <%= link_to "Log In", login_path, class: "nav-link"%> 
+    </li>
       </ul>
     </div>
   </div>
