--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
+  <% if current_user %>
+  Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+<% else %>
+ <p>Please <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %> before adding to cart</p>
+<% end %>
     <%= yield %>
   </main>
 
