--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
 
   <main class="container">
   <% if current_user %>
-  Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+  <p class="mt-3 text-success">Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %></p>
 <% else %>
- <p>Please <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %> before adding to cart</p>
+ <p class="mt-3 text-success">Please <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup'%> before adding to <%= fa_icon "shopping-cart" %>My Cart</p>
 <% end %>
     <%= yield %>
   </main>
